@@ -15,6 +15,7 @@ Stable versions
 	- fix S3M subsong detection (reported by knight-ryu12)
 	- fix S3M/IT special marker handling (reported by knight-ryu12)
 	- fix Galaxy Music System 4.0 song length (reported by AntonZab)
+	- Add support to TrackerPacker v1
 	- Add support to TrackerPacker v2
 
 4.3.11 (20160212):
